refactor: fix all SonarQube issues — constants, complexity, bugs, vulnerabilities
Constants: extracted string literals (ADMIN x17, CANDIDATE x3, /jobs/** x5,
/job-tests/** x5, /interviews/** x4, Session not found x6, python x6,
#f59e0b/#10b981 x3, PROBLEM_SOLVING x3, Job not found x6, etc.)
Stream: replaced all .collect(Collectors.toList()) with .toList()
Exceptions: replaced RuntimeException with IllegalArgumentException /
IllegalStateException throughout services and client
Cognitive complexity: extracted helper methods in SecurityAuditFilter,
InterviewService, TestSessionService, AssessmentResultsService
Bugs: fixed InterruptedException re-interrupt, long multiplication cast,
ignored boolean returns, missing switch default case
Vulnerabilities: reduced multipart upload limit to 8MB, removed Windows
fallback in createSecureTempDir
Unused code: removed unused makeCandidateWithCv, unused scoreFromPython param
Misc: fixed empty catch blocks, nested ternary, continue-heavy loops

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>